[package]
name = "yasfw"
version = "0.1.0"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Yet Another SSHFS for Windows"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
lto = true

[build-dependencies]
cmake = "0.1.45"
pkg-config = "0.3.19"
vcpkg = "0.2.11"
winapi = { version = "0.3.9", features = ["winnt"] }
winres = "0.1.11"

[dependencies]
bitflags = "1.2.1"
clap = "2.33.3"
ctrlc = "3.1.7"
dokan = "0.1.2"
libc = "0.2.82"
lru = "0.6.3"
rpassword = "5.0.0"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.6.0"
slog-term = "2.6.0"
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["std", "winbase", "minwinbase", "ntdef", "ntstatus", "winnt", "fileapi"] }
