[package]
name = "yasfw"
version = "0.1.2"
authors = ["DDoSolitary <DDoSolitary@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "Yet Another SSHFS for Windows"

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
lto = true

[build-dependencies]
cmake = "0.1.45"
pkg-config = "0.3.20"
vcpkg = "0.2.15"
winapi = { version = "0.3.9", features = ["winnt"] }
winres = "0.1.12"

[dependencies]
bitflags = "1.3.2"
clap = "2.33.3"
ctrlc = "3.1.9"
dokan = "0.2.0"
libc = "0.2.103"
lru = "0.7.8"
rpassword = "5.0.1"
slog = { version = "2.7.0", features = ["max_level_trace"] }
slog-async = "2.7.0"
slog-term = "2.8.0"
widestring = "0.4.3"
winapi = { version = "0.3.9", features = ["std", "winbase", "minwinbase", "ntdef", "ntstatus", "winnt", "fileapi"] }
